--- a/sources/StickNoBills.sfdir/font.props
+++ b/sources/StickNoBills.sfdir/font.props
@@ -21,7 +21,7 @@ OS2Version: 0
 OS2_WeightWidthSlopeOnly: 0
 OS2_UseTypoMetrics: 1
 CreationTime: 1423989519
-ModificationTime: 1423994195
+ModificationTime: 1424016651
 PfmFamily: 81
 TTFWeight: 400
 TTFWidth: 5
@@ -53,7 +53,11 @@ NameList: AGL For New Fonts
 DisplaySize: -96
 AntiAlias: 1
 FitToEm: 1
-WinInfo: 156 12 9
+WinInfo: 24 12 9
 BeginPrivate: 0
 EndPrivate
+Grid
+-1024 700 m 0
+ 2048 700 l 1024
+EndSplineSet
 EndSplineFont
