more letters in

--- a/sources/StickNoBills.sfdir/font.props
+++ b/sources/StickNoBills.sfdir/font.props
@@ -21,7 +21,7 @@ OS2Version: 0
 OS2_WeightWidthSlopeOnly: 0
 OS2_UseTypoMetrics: 1
 CreationTime: 1423989519
-ModificationTime: 1424089123
+ModificationTime: 1424093815
 PfmFamily: 81
 TTFWeight: 400
 TTFWidth: 5
@@ -53,7 +53,15 @@ NameList: AGL For New Fonts
 DisplaySize: -96
 AntiAlias: 1
 FitToEm: 1
-WinInfo: 50 10 5
+WinInfo: 0 19 9
 BeginPrivate: 0
 EndPrivate
+Grid
+-1024 131.533325195 m 0
+ 2048 131.533325195 l 1024
+-1024 700.666992188 m 4
+ 2048 700.666992188 l 1028
+-1024 563.666666667 m 0
+ 2048 563.666666667 l 1024
+EndSplineSet
 EndSplineFont
