--- a/sources/StickNoBills.sfdir/font.props
+++ b/sources/StickNoBills.sfdir/font.props
@@ -5,7 +5,7 @@ FamilyName: Stick No Bills
 Weight: Regular
 Copyright: Copyright (c) 2013, STICK NO BILLS\nCopyright (c) 2015, mooniak\n
 UComments: "2015-2-15: Created with FontForge (http://fontforge.org)"
-Version: 001.000
+Version: BETA 001.000
 ItalicAngle: 0
 UnderlinePosition: -102
 UnderlineWidth: 51
@@ -21,7 +21,7 @@ OS2Version: 0
 OS2_WeightWidthSlopeOnly: 0
 OS2_UseTypoMetrics: 1
 CreationTime: 1423989519
-ModificationTime: 1424260376
+ModificationTime: 1424262963
 PfmFamily: 81
 TTFWeight: 400
 TTFWidth: 5
@@ -53,22 +53,28 @@ NameList: AGL For New Fonts
 DisplaySize: -96
 AntiAlias: 1
 FitToEm: 1
-WinInfo: 0 17 6
+WinInfo: 42 14 6
 BeginPrivate: 0
 EndPrivate
 Grid
--1024 395.333333333 m 4
- 2048 395.333333333 l 1028
+356.5 1331 m 0
+ 356.5 -717 l 1024
+-1024 140.671875 m 0
+ 2048 140.671875 l 1024
+-1024 559.695652174 m 0
+ 2048 559.695652174 l 1024
+23 1326 m 0
+ 23 -722 l 1024
+198 1331 m 0
+ 198 -717 l 1024
+-1024 395.333333333 m 0
+ 2048 395.333333333 l 1024
 -1024 272 m 0
  2048 272 l 1024
-43 1331 m 0
- 43 -717 l 1024
 -1024 144.666666667 m 0
  2048 144.666666667 l 1024
 106 1331 m 0
  106 -717 l 1024
-45.46875 1331 m 0
- 45.46875 -717 l 1024
 306.5 1160 m 0
  306.5 -888 l 1024
 -1024 131.533325195 m 0
