--- a/sources/StickNoBills.sfdir/font.props
+++ b/sources/StickNoBills.sfdir/font.props
@@ -21,11 +21,7 @@ OS2Version: 0
 OS2_WeightWidthSlopeOnly: 0
 OS2_UseTypoMetrics: 1
 CreationTime: 1423989519
-<<<<<<< HEAD
-ModificationTime: 1424322611
-=======
-ModificationTime: 1424797214
->>>>>>> origin/master
+ModificationTime: 1424800743
 PfmFamily: 81
 TTFWeight: 400
 TTFWidth: 5
@@ -51,22 +47,22 @@ OS2UnicodeRanges: 00000002.00000000.00000000.00000000
 MarkAttachClasses: 1
 DEI: 91125
 LangName: 1033 "" "" "" "SNBMooniak_beta" "" "" "" "STICK NO BILLS is a trademark of STICK NO BILLS Gallery, Sri Lanka <http://sticknobillsonline.com>" "mooniak <http://mooniak.com>" "Martyn Hodges <allroundboatbuilder@yahoo.com> , mooniak <hello@mooniak.com>" " Stick No Bills - is the bespoke typeface of STICK NO BILLS+ISIA Poster Gallery in Galle, Sri Lanka. " "https://github.com/mooniak/stick-no-bills-font" "http://mooniak.com/type" "This Font Software is licensed under the SIL Open Font License, Version 1.1. This license is available with a FAQ at: http://scripts.sil.org/OFL"
-Encoding: ISO8859-1
+Encoding: Custom
 UnicodeInterp: none
 NameList: AGL For New Fonts
 DisplaySize: -128
 AntiAlias: 1
 FitToEm: 1
-<<<<<<< HEAD
-WinInfo: 182 14 6
-=======
-WinInfo: 140 10 4
->>>>>>> origin/master
+WinInfo: 231 11 5
 BeginPrivate: 0
 EndPrivate
 Grid
-474 1331 m 0
- 474 -717 l 1024
+-1024 700 m 0
+ 2048 700 l 1024
+-1024 476.444444444 m 0
+ 2048 476.444444444 l 1024
+467 1331 m 0
+ 467 -717 l 1024
 509 1331 m 0
  509 -717 l 1024
 -1024 -23 m 0
