--- a/sources/StickNoBills.sfdir/font.props
+++ b/sources/StickNoBills.sfdir/font.props
@@ -21,15 +21,7 @@ OS2Version: 0
 OS2_WeightWidthSlopeOnly: 0
 OS2_UseTypoMetrics: 1
 CreationTime: 1423989519
-<<<<<<< HEAD
-ModificationTime: 1424843525
-=======
-<<<<<<< HEAD
-ModificationTime: 1424801640
-=======
-ModificationTime: 1424800767
->>>>>>> origin/master
->>>>>>> origin/master
+ModificationTime: 1424866961
 PfmFamily: 81
 TTFWeight: 400
 TTFWidth: 5
@@ -55,30 +47,20 @@ OS2UnicodeRanges: 00000002.00000000.00000000.00000000
 MarkAttachClasses: 1
 DEI: 91125
 LangName: 1033 "" "" "" "SNBMooniak_beta" "" "" "" "STICK NO BILLS is a trademark of STICK NO BILLS Gallery, Sri Lanka <http://sticknobillsonline.com>" "mooniak <http://mooniak.com>" "Martyn Hodges <allroundboatbuilder@yahoo.com> , mooniak <hello@mooniak.com>" " Stick No Bills - is the bespoke typeface of STICK NO BILLS+ISIA Poster Gallery in Galle, Sri Lanka. " "https://github.com/mooniak/stick-no-bills-font" "http://mooniak.com/type" "This Font Software is licensed under the SIL Open Font License, Version 1.1. This license is available with a FAQ at: http://scripts.sil.org/OFL"
-Encoding: Custom
+Encoding: ISO8859-1
 UnicodeInterp: none
 NameList: AGL For New Fonts
 DisplaySize: -128
 AntiAlias: 1
 FitToEm: 1
-<<<<<<< HEAD
-WinInfo: 90 10 4
-=======
-<<<<<<< HEAD
-WinInfo: 231 11 5
-=======
-WinInfo: 150 10 4
->>>>>>> origin/master
->>>>>>> origin/master
+WinInfo: 50 10 4
 BeginPrivate: 0
 EndPrivate
 Grid
--1024 700 m 0
- 2048 700 l 1024
--1024 476.444444444 m 0
- 2048 476.444444444 l 1024
-467 1331 m 0
- 467 -717 l 1024
+134 1331 m 0
+ 134 -717 l 1024
+474 1331 m 0
+ 474 -717 l 1024
 509 1331 m 0
  509 -717 l 1024
 -1024 -23 m 0
