--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,15 @@
 language: ruby
 rvm:
-  - 2.1
-script:
-  - bundle exec jekyll build
-  - bundle exec htmlproof ./_site --only-4xx --check-favicon --check-html
+- 2.1
+# Assume bundler is being used, install step will run `bundle install`.
+script: ./script/cibuild
+
+# branch whitelist
+branches:
+  only:
+  - gh-pages     # test the gh-pages branch
+  - /pages-(.*)/ # test every branch which starts with "pages-"
+
 env:
   global:
-    - NOKOGIRI_USE_SYSTEM_LIBRARIES=true # speeds up installation of html-proofer
+  - NOKOGIRI_USE_SYSTEM_LIBRARIES=true # speeds up installation of html-proofer
