--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ script: ./script/cibuild
 # branch whitelist
 branches:
   only:
-  - gh-pages     # test the gh-pages branch
+  - master
   - /pages-(.*)/ # test every branch which starts with "pages-"
 
 env:
