--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ family_weight_1: Light
 family_weight_2: Bold
 thumb_url:
 glyphs: අ ඉ ඊ උ එ ඔ ක ඛ ග ඝ ච ට ඩ න ප ව හ
-string_sinhala: දසවසර නගරබදවය කම කනමදය ගතවන කනකර සමරන සලපතළ දනට කපල ළය සරසන වනරතන රත සවන යටවන පරවල වටය නගරබදවය වදන සතයකට අද මටටම සමර ගතකර නගරබදවය ගතකර අගනගරය ගස සම අපර අසමසම කටට බණ අයකරන රටවට අ පරණ පතක නගරබදවය නගරබදවය පණමට නවකවදය නගරබදවය මත වළදන යට රටවල නවවන පවසවනව මලල කලමතය නගරබදවය අලවන බරපතල කළබව පලස කතරගම අතපත වනනඅතර නවක
+string_sinhala: දසවසර නගරබදවය කම කනමදය ගතවන කනකර සමරන සලපතළ දනට කපල ළය සරසන වනරතන රත සවන යටවන පරවල වටය නගරබදවය වදන සතයකට අද මටටම සමර ගතකර නගරබදවය ගතකර අගනගරය ගස සම අපර අසමසම කටට බණ අයකරන රටවට අ පරණ පතක නගරබදවය නගරබදවය පණමට නවකවදය නගරබදවය මත වළදන යට රටවල නවවන පවසවනව මලල කලමතය නගරබදවය අලවන බරපතල කළබව පලස 
 string_latin: novas snappiness idea viands edison avion iodopsins ass nose peon spininess eve sod dividends possisdendi denda assidaean pep anapes aped dispossessed vendean pinons despises is diseasedness desidiose seas a pain sod do peep anne openendedness novas spoon evase do nee spondean en spondean saanen on seasides andia ion dissava poseidon is as indivision nonpossessive avidnesses an asap vinea pinnas pips dispassion iso aid save sane div en possessedness ped
 
 
