Updates to test docs

--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,9 @@ family_name: StickNoBills
 family_weight_1: Light
 family_weight_2: Bold
 thumb_url:
-glyphs: අ ඉ ඊ උ එ ඔ ක ඛ ග ඝ ච ට ඩ න ප ව හ
-string_sinhala: නවවන අටක ඉනට එවන එන චවන අගවන අපව කඩන කනකට ගහක උනට අඩපන එට ගහ අනන ඔප නවවන අගවන ඉඩකඩ අහක එක කනකට පටවන අක වගව අහගන අග අඩපන වඩවන ගහක අට අටවන නව කහ උගහට නටවන පවට අඩපන කවට කටවහ එ ච අගවන නගන පනවන පටක වගව කටට කටහඩ ඊ එකග පටවන කටට අඩපන ගන අ වට නටවන ඊටට අහන ඉඩකඩ චනට ඔපවන එකට අගවන චන අටවක අඩක උප අගවන වඩවන අඩපන කටවහ නවක අක වඩ පනවන පවකට කව කනකට ඝන වනට අගවන උපන හඩ පහට නටන ඔපවන චන අටක උඩ ඉව කවන පටවන එකට අඩ නවවන අහගන නවන අහගන පනවන පටවන එකග උපන චන වඩවන පවකට පවකට වඩ පටවන අගවන ඔපවන ටක හඩ ගහන කන ඉනට ක අටවක උගහට කන උහන කටවහ කවට පනවන ග ඉඩක නටවන එකක කහන ඉඩක එට උපන උගහට
-string_latin: An investigation has concluded that there is little evidence that creams, painkillers and anti-inflammatories often used for bites actually work. In any case, said Drug and Therapeutics Bulletin researchers, the reactions got better by themselves in most cases. Midges, mosquitoes, flies, fleas and 
+string_sinhala: දසවසර නගරබදවය කම කනමදය ගතවන කනකර සමරන සලපතළ දනට කපල ළය සරසන වනරතන රත සවන යටවන පරවල වටය නගරබදවය වදන සතයකට අද මටටම සමර ගතකර නගරබදවය ගතකර අගනගරය ගස සම අපර අසමසම කටට බණ අයකරන රටවට අ පරණ පතක නගරබදවය නගරබදවය පණමට නවකවදය නගරබදවය මත වළදන යට රටවල නවවන පවසවනව මලල කලමතය නගරබදවය අලවන බරපතල කළබව පලස
+string_latin: Azulejo Boxeo Clavija Duquesa Estupendo Fetichismo Graficos Hockey Iceberg. அன்பென்ற அழகிய உணர்வின் அற்புதங்களை அனுபவித்தல் சுகமானது. இதுதான் வாழ்வின் ஆனந்தமான தருணங்களின் தோற்றுவாய். ஒவ்வொரு தினமும் அன்பென்பதை ஆராதிப்போம். வாருங்கள். சேருங்கள்.Jockey Kilowatt Lavadero Memorizar Nixon Ochenta Preferible Quiroga Rawson Sequoia Tango Usurpar Verificar Whisky Xenofobia Yacimiento. Zapadorel pinguiஅன்பென்ற அழகிய உணர்வின் அற்புதங்களை அனுபவித்தல் சுகமானது. இதுதான் வாழ்வின் ஆனந்தமான தருணங்களின் தோற்றுவாய். ஒவ்வொரு தினமும் அன்பென்பதை ஆராதிப்போம். வாருங்கள். சேருங்கள்.no wenceslao hizo kilometros bajo exhaustiva lluvia y frio anoraba su querido cachorrofew black taxis drive up major roads on quietஅன்பென்ற அழகிய உணர்வின் அற்புதங்களை அனுபவித்தல் சுகமானது. இதுதான் வாழ்வின் ஆனந்தமான தருணங்களின் தோற்றுவாய். ஒவ்வொரு தினமும் அன்பென்பதை ஆராதிப்போம். வாருங்கள். சேருங்கள். hazy nights
+
 
 safe: false
 lsi: false
